feat: Add `view_issues_show_after_details` hook needed for redmine_merge_request_links

--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -125,6 +125,8 @@ end %>
 </div>
 <% end %>
 
+<%= call_hook(:view_issues_show_after_details, :issue => @issue) %>
+
 <% if @journals.present? %>
 <div id="history">
 <h3><%=l(:label_history)%></h3>
