--- a/app/views/issues/edit.html.erb
+++ b/app/views/issues/edit.html.erb
@@ -1,13 +1,13 @@
 <!-- to support view override using hooks -->
 <% call_hook(:view_issues_edit_view_override) %>
 
-<% if @view_issues_edit_view_override[:assets].present? %>
+<% if @view_issues_edit_view_override && @view_issues_edit_view_override[:assets].present? %>
   <% @view_issues_edit_view_override[:assets].each do |hook_assets| %>
     <%= hook_assets.html_safe %>
   <% end %>
 <% end %>
 
-<% if @view_issues_edit_view_override[:content].present? %>
+<% if @view_issues_edit_view_override && @view_issues_edit_view_override[:content].present? %>
   <%= @view_issues_edit_view_override[:content] %>
 <% else %>
   <h2><%= "#{@issue.tracker_was} ##{@issue.id}" %></h2>
