--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,13 +1,13 @@
 <!-- to support view override using hooks -->
 <% call_hook(:view_issues_show_view_override, issue: @issue, project: @project) %>
 
-<% if @view_issues_show_view_override[:assets].present? %>
+<% if @view_issues_show_view_override && @view_issues_show_view_override[:assets].present? %>
   <% @view_issues_show_view_override[:assets].each do |hook_assets| %>
     <%= hook_assets.html_safe %>
   <% end %>
 <% end %>
 
-<% if @view_issues_show_view_override[:content].present? %>
+<% if @view_issues_show_view_override && @view_issues_show_view_override[:content].present? %>
   <%= @view_issues_show_view_override[:content].html_safe %>
 <% else %>
 <%= render :partial => 'action_menu' %>
