--- a/app/views/settings/_api.html.erb
+++ b/app/views/settings/_api.html.erb
@@ -2,6 +2,7 @@
 
 <div class="box tabular settings">
 <p><%= setting_check_box :rest_api_enabled %></p>
+</div>
 
 <%= submit_tag l(:button_save) %>
 <% end %>
