--- a/app/views/custom_fields/_form.html.erb
+++ b/app/views/custom_fields/_form.html.erb
@@ -5,6 +5,9 @@
 <div class="box tabular">
 <p><%= f.select :field_format, custom_field_formats_for_select(@custom_field), {}, :disabled => !@custom_field.new_record? %></p>
 <p><%= f.text_field :name, :size => 50, :required => true %></p>
+
+<%= render :partial => 'common/translations', :locals => { translated_field: :name, :f => f } %>
+
 <p><%= f.text_area :description, :rows => 7 %></p>
 
 <% if @custom_field.format.multiple_supported %>
