--- a/app/views/issue_statuses/_form.html.erb
+++ b/app/views/issue_statuses/_form.html.erb
@@ -2,6 +2,7 @@
 
 <div class="box tabular">
 <p><%= f.text_field :name, :required => true %></p>
+<%= render :partial => 'common/translations', :locals => { translated_field: :name, :f => f } %>
 <% if Issue.use_status_for_done_ratio? %>
   <p><%= f.select :default_done_ratio, ((0..10).to_a.collect {|r| ["#{r*10} %", r*10] }), :include_blank => true, :label => :field_done_ratio %></p>
 <% end %>
