--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -3,6 +3,7 @@
 <div class="box tabular">
   <% unless @role.builtin? %>
     <p><%= f.text_field :name, :required => true %></p>
+    <%= render :partial => 'common/translations', :locals => { translated_field: :name, :f => f } %>
     <p><%= f.check_box :assignable %></p>
   <% end %>
 
