--- a/app/views/trackers/_form.html.erb
+++ b/app/views/trackers/_form.html.erb
@@ -5,6 +5,7 @@
 <div class="box tabular">
 <!--[form:tracker]-->
 <p><%= f.text_field :name, :required => true %></p>
+<%= render :partial => 'common/translations', :locals => { translated_field: :name, :f => f } %>
 <p><%= f.select :default_status_id,
         IssueStatus.sorted.map {|s| [s.name, s.id]},
         :include_blank => @tracker.default_status.nil?,
