fix: translated_language_ids nil handling and strong params

--- a/app/views/common/_translations.erb
+++ b/app/views/common/_translations.erb
@@ -1,7 +1,9 @@
 <%# requires a :i18n store attribute %>
+<% translated_languages = Setting.translated_language_ids %>
+<% if translated_languages.present? %>
 <fieldset class="box tabular"><legend><%= l(:label_translated_language) %></legend>
   <%= f.fields_for :i18n do |fi| %>
-    <% Setting.translated_language_ids.each do |locale| %>
+    <% translated_languages.each do |locale| %>
       <p>
       <%= fi.text_field "#{translated_field}[#{locale}]",
         value: f.object.i18n&.dig(translated_field, locale),
@@ -11,3 +13,4 @@
     <% end %>
   <% end %>
 </fieldset>
+<% end %>
