--- a/app/views/custom_fields/_index.html.erb
+++ b/app/views/custom_fields/_index.html.erb
@@ -13,7 +13,7 @@
   <% (@custom_fields_by_type[tab[:name]] || []).sort.each do |custom_field| -%>
     <% back_url = custom_fields_path(:tab => tab[:name]) %>
     <tr>
-      <td class="name"><%= link_to custom_field.name, edit_custom_field_path(custom_field) %></td>
+      <td class="name"><%= link_to custom_field.i18n_name, edit_custom_field_path(custom_field) %></td>
       <td><%= l(custom_field.format.label) %></td>
       <td><%= checked_image custom_field.is_required? %></td>
       <% if tab[:name] == 'IssueCustomField' %>
