--- a/app/views/trackers/index.html.erb
+++ b/app/views/trackers/index.html.erb
@@ -16,8 +16,8 @@
   <tbody>
 <% for tracker in @trackers %>
   <tr>
-  <td class="name"><%= link_to tracker.name, edit_tracker_path(tracker) %></td>
-  <td><%= tracker.default_status.name %></td>
+  <td class="name"><%= link_to tracker.i18n_name, edit_tracker_path(tracker) %></td>
+  <td><%= tracker.default_status.i18n_name %></td>
   <td class="description"><%= tracker.description %></td>
   <td>
     <% unless tracker.workflow_rules.exists? %>
