--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -58,8 +58,8 @@
 
 <div class="attributes">
 <%= issue_fields_rows do |rows|
-  rows.left l(:field_status), @issue.status.name, :class => 'status'
-  rows.left l(:field_priority), @issue.priority.name, :class => 'priority'
+  rows.left l(:field_status), @issue.status.i18n_name, :class => 'status'
+  rows.left l(:field_priority), @issue.priority.i18n_name, :class => 'priority'
 
   unless @issue.disabled_core_fields.include?('assigned_to_id')
     rows.left l(:field_assigned_to), (@issue.assigned_to ? link_to_principal(@issue.assigned_to) : "-"), :class => 'assigned-to'
@@ -145,7 +145,7 @@ end %>
   <%= f.link_to 'PDF' %>
 <% end %>
 
-<% html_title "#{@issue.tracker.name} ##{@issue.id}: #{@issue.subject}" %>
+<% html_title "#{@issue.tracker.i18n_name} ##{@issue.id}: #{@issue.subject}" %>
 
 <% content_for :sidebar do %>
   <%= render :partial => 'issues/sidebar' %>
