--- a/app/views/trackers/_form.html.erb
+++ b/app/views/trackers/_form.html.erb
@@ -7,7 +7,7 @@
 <p><%= f.text_field :name, :required => true %></p>
 <%= render :partial => 'common/translations', :locals => { translated_field: :name, :f => f } %>
 <p><%= f.select :default_status_id,
-        IssueStatus.sorted.map {|s| [s.name, s.id]},
+        IssueStatus.sorted.map {|s| [s.i18n_name, s.id]},
         :include_blank => @tracker.default_status.nil?,
         :required => true %>
 </p>
@@ -31,7 +31,7 @@
   <% @issue_custom_fields.each do |field| %>
     <label class="block">
       <%= check_box_tag 'tracker[custom_field_ids][]',field.id, @tracker.custom_fields.to_a.include?(field), :id => nil %>
-      <%= field.name %>
+      <%= field.i18n_name %>
     </label>
   <% end %>
 </p>
