--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,3 +1,15 @@
+<!-- to support view override using hooks -->
+<% call_hook(:view_issues_show_view_override, issue: @issue, project: @project) %>
+
+<% if @view_issues_show_view_override&.dig(:assets).present? %>
+  <% @view_issues_show_view_override[:assets].each do |hook_assets| %>
+    <%= hook_assets.html_safe %>
+  <% end %>
+<% end %>
+
+<% if @view_issues_show_view_override&.dig(:content).present? %>
+  <%= @view_issues_show_view_override[:content].html_safe %>
+<% else %>
 <%= render :partial => 'action_menu' %>
 
 <h2 class="inline-flex"><%= issue_heading(@issue) %></h2>
@@ -46,8 +58,7 @@
 
 <div class="attributes">
 <%= issue_fields_rows do |rows|
-  rows.left l(:field_status), @issue.status.name, :class => 'status'
-
+  rows.left l(:field_status), @issue.status.i18n_name, :class => 'status'
   unless @issue.disabled_core_fields.include?('priority_id')
     rows.left l(:field_priority), @issue.priority.name, :class => 'priority'
   end
@@ -122,6 +133,8 @@ end %>
 
 <%= render partial: 'action_menu_edit' if User.current.wants_comments_in_reverse_order? %>
 
+<%= call_hook(:view_issues_show_after_details, :issue => @issue) %>
+
 <div id="history">
 <%= render_tabs issue_history_tabs, issue_history_default_tab %>
 </div>
@@ -133,7 +146,7 @@ end %>
   <%= f.link_to 'PDF' %>
 <% end %>
 
-<% html_title "#{@issue.tracker.name} ##{@issue.id}: #{@issue.subject}" %>
+<% html_title "#{@issue.tracker.i18n_name} ##{@issue.id}: #{@issue.subject}" %>
 
 <% content_for :sidebar do %>
   <%= render :partial => 'issues/sidebar' %>
@@ -151,3 +164,5 @@ end %>
 <% end %>
 
 <%= context_menu %>
+
+<% end %>
