--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -80,6 +80,9 @@ pre, code {font-family: Consolas, Menlo, "Liberation Mono", Courier, monospace;}
   position:absolute;
   width: inherit;
   z-index:45;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 80vh;
   background-color:#fff;
   border-right: 1px solid #759FCF;
   border-bottom: 1px solid #759FCF;
@@ -128,7 +131,6 @@ pre, code {font-family: Consolas, Menlo, "Liberation Mono", Courier, monospace;}
 
 #login-form {margin:5em auto 2em auto; padding:20px; width:340px; border:1px solid #FDBF3B; background-color:#FFEBC1; border-radius:4px; box-sizing: border-box;}
 #login-form label {display:block; margin-bottom:5px; font-weight:bold;}
-#login-form label[for=autologin] {font-weight:normal;}
 #login-form input {height: 29px;}
 #login-form input[type=text], #login-form input[type=password], #login-form input[type=submit] {display: block; width: 100%;}
 #login-form input[type=text], #login-form input[type=password] {margin-bottom: 15px;}
