--- a/app/views/workflows/_form.html.erb
+++ b/app/views/workflows/_form.html.erb
@@ -16,7 +16,7 @@
       <%= link_to_function('', "toggleCheckboxesBySelector('table.transitions-#{name} input[type=checkbox]:not(:disabled).new-status-#{new_status.id}')",
                            :title => "#{l(:button_check_all)} / #{l(:button_uncheck_all)}",
                            :class => 'no-tooltip icon-only icon-checked') %>
-      <%= new_status.name %>
+      <%= new_status.i18n_name %>
     </td>
     <% end %>
   </tr>
@@ -31,7 +31,7 @@
                            :title => "#{l(:button_check_all)} / #{l(:button_uncheck_all)}",
                            :class => 'no-tooltip icon-only icon-checked') %>
       <% if old_status %>
-        <% old_status_name = old_status.name %>
+        <% old_status_name = old_status.i18n_name %>
         <%= old_status_name %>
       <% else %>
         <% old_status_name = l(:label_issue_new) %>
@@ -40,7 +40,7 @@
     </td>
     <% for new_status in @statuses -%>
     <% checked = (old_status == new_status) || (transition_counts[[old_status, new_status]] > 0) %>
-    <td class="no-tooltip <%= checked ? 'enabled' : '' %>" title="<%= old_status_name %> &#187; <%= new_status.name %>">
+    <td class="no-tooltip <%= checked ? 'enabled' : '' %>" title="<%= old_status_name %> &#187; <%= new_status.i18n_name %>">
       <%= transition_tag transition_counts[[old_status, new_status]], old_status, new_status, name %>
     </td>
     <% end -%>
